--- a/TravelExpertData/TravelExpertData.csproj
+++ b/TravelExpertData/TravelExpertData.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Scripts\" />
+  </ItemGroup>
+
 </Project>
