--- a/TravelExpertGUI/App.config
+++ b/TravelExpertGUI/App.config
@@ -2,5 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name = "TravelExpertsConnection" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=TravelExperts;Integrated Security=True; TrustServerCertificate=true"/>
+		<add name="AzureStorageConnection"
+		     connectionString="${{ secrets.BlobStorageCon }}" />
 	</connectionStrings>
 </configuration>
