--- a/TravelExpertGUI/TravelExpertGUI.csproj
+++ b/TravelExpertGUI/TravelExpertGUI.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TravelExpertData\TravelExpertData.csproj" />
   </ItemGroup>
 
