--- a/TravelExpertGUI/TravelExpertGUI.csproj
+++ b/TravelExpertGUI/TravelExpertGUI.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TravelExpertData\TravelExpertData.csproj" />
+    <ProjectReference Include="..\TravelExpertUtils\TravelExpertUtils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
